kb: add/update topics Garbage Collection Algorithms, Multithreading & Concurrency in Java, Collections & Data Structures, Java Stream API & Functional Programming, System Design Basics